made corrections to the width of the ads section and removed the horizontal scroll

--- a/main.css
+++ b/main.css
@@ -105,6 +105,7 @@ section {
 body {
   line-height: 1;
   font-family: "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+  overflow-x: hidden;
 }
 
 ol,
@@ -260,7 +261,7 @@ nav input {
 }
 
 .ads {
-  width: 1440px;
+  width: 100%;
   grid-column: 2;
   grid-row: 5;
 }
